--- a/css/badges.css
+++ b/css/badges.css
@@ -6,10 +6,21 @@
   font-size: 3em;
   margin: 0.1em;
 }
-.double-val-label {
+.double-val-label 
+{
+  position: relative;
   display: table;
   font-family: 'Roboto', sans-serif;
   margin: 0.4em;
+}
+.double-val-label::before{
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(144deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%);
+  border-radius: 0.25em;
+  mix-blend-mode: soft-light;
 }
 .double-val-label > span {
   background-color: #656565;
@@ -37,4 +48,95 @@
   margin-bottom: 20px;
   display: flex;
   flex-wrap: wrap;
+}
+
+table{
+  will-change: opacity;
+  transition: 1s;
+  animation: tabletype 1s;
+  border-radius: 5px;
+}
+.TableContent
+{
+  width: 100%;
+  float: left;
+  display: inline-block;
+  position: relative;
+}
+.TableContent::before{
+  content: "";
+    background: linear-gradient(144deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%);
+    width: inherit;
+    height: -webkit-fill-available;
+    position: absolute;
+    z-index: 1;
+    display: block;
+    border-radius: 5px;
+    pointer-events: none;
+    mix-blend-mode: soft-light;
+    margin-bottom: 15px;
+}
+.Tools{
+  background: #242424;
+    padding: 5px;
+    border-radius: 10px;
+    font-size: 10px;
+    display: inline-block;
+    transition: 0.5s;
+    cursor: default;
+    margin: 1px;
+}
+.Tools:hover
+{
+  background: white;
+  color: #242424;
+}
+td{
+  font-size: smaller;
+}
+.Arrow{
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  right: 50px;
+  margin-top: 60px;
+}
+.Arrow >p{
+  font-family: "Elegancy";
+}
+.Arrow > div::before{
+  content: '';
+  background-image: url(../images/arrow_up_down.svg);
+  width: inherit;
+  height: inherit;
+  background-size: contain;
+  transform: rotateY(180deg) rotateZ(354deg);
+  position: absolute;
+  bottom: 85px;
+  right: 80px;
+  pointer-events: none;
+}
+.Arrow > p{
+  width: 130px; 
+  position: relative; 
+  right: 50px; 
+  z-index: 1; 
+  text-align: center; 
+  background: radial-gradient(circle, rgba(224,224,224,1) 30%, rgba(0,0,0,0) 100%);
+  pointer-events: none;
+}
+.Arrow > div::after{
+  content: '';
+  background-image: url('../images/arrow.svg');
+  width: inherit;
+  height: inherit;
+  background-size: contain;
+  transform: rotateY(180deg) rotateZ(40deg);
+  position: absolute;
+  pointer-events: none;
+}
+@keyframes tabletype
+{
+  0%{opacity: 0 !important;}
+  100%{opacity: 1 !important;}
 }
