--- a/css/progressbar.css
+++ b/css/progressbar.css
@@ -56,8 +56,6 @@
 }
 .boxbefore::after{
     content:'';
-   /* pointer-events: none;*/
-    background: linear-gradient(62deg, rgb(0 138 255 / 16%) -35%, rgb(0 0 0 / 0.7) 100%);    width: 100%;
     height: 100%;
     position: absolute;
     top: 0;
@@ -73,6 +71,8 @@ a.button {
     text-decoration: none !important;
     width: inherit;
     font-weight: bold !important;
+    border-bottom-style: inset;
+    border-bottom-color: rgb(196, 196, 196);
 }
 .box::after{
     content: '';
@@ -148,5 +148,8 @@ a.button {
 @media (max-width: 767px){
     .boxbefore ,.boxbefore::after {
         border-bottom-left-radius: 0;
+    }
+    a.button{
+        border-bottom-style: none;
     }
 }
