--- a/css/badges.css
+++ b/css/badges.css
@@ -59,7 +59,6 @@ table{
 .TableContent
 {
   width: 100%;
-  float: left;
   display: inline-block;
   position: relative;
 }
@@ -84,6 +83,7 @@ table{
     display: inline-block;
     transition: 0.5s;
     cursor: default;
+    border: 1.5px #545454d9 solid;
     margin: 1px;
 }
 .Tools:hover
@@ -140,3 +140,94 @@ td{
   0%{opacity: 0 !important;}
   100%{opacity: 1 !important;}
 }
+label
+    {    
+        cursor: pointer; 
+        padding-right: 25px;
+    }
+    .ProjectsList
+    {
+      position: relative;
+      padding: 20px;
+      border-radius: 9px;
+      width: 100%;
+      display: inline-block;
+      vertical-align: top;
+      background: linear-gradient(90deg, rgb(255 255 255 / 0%) 0%, rgb(0 0 0 / 0%) 0%);
+      box-shadow: inset 0 0 15px rgb(55 84 170 / 0%), inset 0 0 20px rgb(255 255 255 / 0%), 7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px white, inset 0px 0px 4px rgb(255 255 255 / 10%);
+    }
+    .ProjectsList::after{
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      border-radius: 10px;
+      background: linear-gradient(141deg , #ebebeb 0%, rgb(0 0 0 / 0%) 80%);
+      mix-blend-mode: soft-light;
+      pointer-events: none;
+    }
+    #lst * 
+    { 
+        list-style:none;
+        -webkit-touch-callout: none; 
+        -webkit-user-select: none; 
+        -khtml-user-select: none;
+        -moz-user-select: none; 
+        -ms-user-select: none; 
+        user-select: none;
+        color: whitesmoke;
+    }
+    #lst li
+    {
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;  
+        width: fit-content;    
+    }
+    #lst li:hover{
+        transition: 1s;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    }
+    #lst li 
+    {
+        color:#222; 
+        text-decoration:none;
+        background: #454d55;
+        position:  relative;
+    }
+    #lst > li:before
+    { 
+      content: '';
+      /* margin-right: 4px; */
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(144deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%);
+      z-index: 1;
+      position: absolute;
+      border-radius: 9px;
+      mix-blend-mode: soft-light; 
+      pointer-events: none;
+    }
+    #lst input[name="list"]  { display: none; }
+    #lst label:before
+    { 
+        content:"\025b8"; 
+        margin-right:4px;
+        font-size: 30px;
+        position: relative;
+        top: 4px;
+    }
+    #lst input:checked ~ label:before { content:"\025be"; }
+    #lst .interior
+    {
+        display: none;
+        margin-left: 0;
+        padding: 15px;
+    }
+    #lst input:checked ~ ul
+    {
+        width: 100%;
+        display:block;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    }
