--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body{
 
                                         /* navbar */
 .home .navbar-dark{
-    background-image: linear-gradient( 175deg , #1f1f1fd4 0%, #000000d1 100%) !important;    
+    background-color: #141414f7;
     backdrop-filter: blur(2px);
 }
 
@@ -112,7 +112,7 @@ body{
     font-weight: 600;
 }
 .home .nav-link:hover{
-    color: black !important;
+ /*   color: black !important;*/
 }
                                         /* home text */
 .home .home-text{
@@ -178,11 +178,10 @@ body{
                                 
 @media(max-width:767px){ 
     .home .navbar-dark{
-        background-image: linear-gradient(175deg, #4545457d 0%, #000000d6 100%);
         transition: 0.5s ease;
     }
     .home .nav-link:hover{
-    color: black !important;
+    /*color: black !important;*/
     }
     .home img{
         display: none;
@@ -272,6 +271,7 @@ body{
     justify-content: center;
     border-bottom-right-radius: 15px;
     border-top-right-radius: 15px;
+    background-color: #f0f8ff36;
 }
 .about .row .description h4{
     font-weight: 600;
@@ -416,12 +416,42 @@ body{
 }
 .skills .panel
 {
+    position: relative;
     padding: 1rem;
     background-color: #f0f8ff36;
     border-radius: 10px;
     margin:auto;
     box-shadow: inset 6px 6px 10px 0 rgb(0 0 0 / 20%), inset -6px -6px 10px 0 rgb(255 255 255 / 50%);
 }
+/*
+.panel::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    background: linear-gradient(124deg, rgb(197 247 255) 0%, rgb(44 66 72) 100%);
+    z-index: 2;
+    opacity: 0.2;
+    border: #6ad3ff 2px solid;
+    pointer-events: none;
+}
+.panel::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    z-index: 2;
+    opacity: 0.4;
+    pointer-events: none;
+    background: linear-gradient(124deg, rgba(0,0,0,0) 39%, rgba(255,255,255,0.8911939775910365) 58%, rgba(255,255,255,0.6811099439775911) 70%, rgba(0,0,0,0) 87%);
+}*/
+
 @media(max-width:466px)
 {
     .skills .panel { width: 100%; }
@@ -454,6 +484,9 @@ body{
     background: rgb(189, 189, 189);
     border-radius: 10px;
     box-shadow: inset 6px 6px 10px 0 rgb(0 0 0 / 20%), inset -6px -6px 10px 0 rgb(255 255 255 / 50%);
+}
+#NameCompany_List{
+    box-shadow: 6px 6px 15px rgb(0 0 0 / 50%), -6px -6px 15px rgb(255 0 0 / 0%);
 }
   .row h3{
       display: block;
@@ -550,18 +583,6 @@ body{
     color: black;
     font-weight: 500;
 }
-.skills .row .btn{
-    background-image: linear-gradient(135deg, #5d74db 0%, #8853bd 100%);
-    color: white !important;
-    border: none;
-    width: 120px;
-    font-weight: 600;
-    transition: 0.3s ease;
-}
-.skills .row .btn:hover{
-    background-image: linear-gradient(135deg, #455dca 0%, #6a32a1 100%);
-}
-
                             /* skills row bar  */
 .skills .progress{
     margin-bottom: 1%;
@@ -597,7 +618,7 @@ body{
 }
                                       /* contact */
 .contact{
-    background-color: black;
+    background-color: #141414;
     color: white;
     min-height: 100vh;
     width: 100%;
