--- a/css/badges.css
+++ b/css/badges.css
@@ -148,25 +148,17 @@ label
     .ProjectsList
     {
       position: relative;
-      padding: 20px;
-      border-radius: 9px;
       width: 100%;
-      display: inline-block;
-      vertical-align: top;
-      background: linear-gradient(90deg, rgb(255 255 255 / 0%) 0%, rgb(0 0 0 / 0%) 0%);
-      box-shadow: inset 0 0 15px rgb(55 84 170 / 0%), inset 0 0 20px rgb(255 255 255 / 0%), 7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px white, inset 0px 0px 4px rgb(255 255 255 / 10%);
     }
-    .ProjectsList::after{
-      content: '';
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      border-radius: 10px;
-      background: linear-gradient(141deg , #ebebeb 0%, rgb(0 0 0 / 0%) 80%);
-      mix-blend-mode: soft-light;
-      pointer-events: none;
+    .ImgTable{
+      border-style: none;
+      width: 190px;
+      height: 50%;
+      display: table-cell;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      cursor: pointer;
     }
     #lst * 
     { 
@@ -178,6 +170,7 @@ label
         -ms-user-select: none; 
         user-select: none;
         color: whitesmoke;
+        width: 200px;
     }
     #lst li
     {
@@ -195,6 +188,9 @@ label
         text-decoration:none;
         background: #454d55;
         position:  relative;
+    }
+    #lst > li{
+      box-shadow: 6px 6px 15px rgb(0 0 0 / 50%), -6px -6px 15px rgb(255 0 0 / 0%);
     }
     #lst > li:before
     { 
