--- a/css/badges.css
+++ b/css/badges.css
@@ -149,6 +149,12 @@ label
     {
       position: relative;
       width: 100%;
+      text-align: center;
+    }
+    .ProjectsList ul 
+    { 
+      display: inline-flex;
+      padding: 5px; 
     }
     .ImgTable{
       border-style: none;
@@ -195,7 +201,7 @@ label
     #lst > li:before
     { 
       content: '';
-      /* margin-right: 4px; */
+      left: 0;
       width: 100%;
       height: 100%;
       background: linear-gradient(144deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%);
@@ -213,8 +219,14 @@ label
         font-size: 30px;
         position: relative;
         top: 4px;
+        right: 70px;
     }
-    #lst input:checked ~ label:before { content:"\025be"; }
+    #lst input:checked ~ label:before 
+    { 
+      content: "\025be";
+      right: 70px;
+      position: relative;
+    }
     #lst .interior
     {
         display: none;
