--- a/css/featured.css
+++ b/css/featured.css
@@ -46,6 +46,7 @@
     top: -9px;
     border-radius: 3.7rem;
     z-index: 1;
+    pointer-events: none;
 }
 .PetVideo::before{
     content: '';
@@ -144,6 +145,7 @@
     top: -12px;
     border-radius: 3.7rem;
     z-index: 1;
+    pointer-events: none;
 }
 .LixVideo::before{
     content: '';
