--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,14 @@ body{
 .skills .title h2{
     font-size: 2.4em;
     font-weight: 600;
+    font-size: 3.4em;
+    font-weight: bolder;
+    background: linear-gradient(145deg,#76D4F8 0%, #4178F0 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-box-decoration-break: clone;
+    font-family: system-ui;
 }
 
                                     /* skills row text*/
