--- a/css/style.css
+++ b/css/style.css
@@ -222,9 +222,11 @@ body{
 
 }
 .aboutCard{
+    opacity: 0;
     margin-right: 15% !important;
     width: 80%;
     margin-left: auto !important;
+    opacity: 1;
 }
                                             /* about row */
 .photo{
@@ -350,6 +352,7 @@ body{
     padding: 5em 0;
     display: flex;
     flex-direction: column;
+    clip-path: ellipse(178vw 100% at 62% 100%);
 }   
 .services .title{
     text-align: center;
