--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,7 @@ body{
     border-radius: 10px;
     margin:auto;
     box-shadow: inset 6px 6px 10px 0 rgb(0 0 0 / 20%), inset -6px -6px 10px 0 rgb(255 255 255 / 50%);
+    width: -webkit-fill-available;
 }
 
 
