--- a/css/featured.css
+++ b/css/featured.css
@@ -1,4 +1,5 @@
 /*PET INFO*/
+video{outline: 0px;}    
 
 .PetVideo{
     width: 233px;
@@ -47,7 +48,6 @@
     top: -9px;
     border-radius: 20%;
     z-index: 1;
-    pointer-events: none;
 }
 .PetVideo::before{
     content: '';
@@ -62,6 +62,7 @@
     z-index: 3;
     border-radius: 30px;
     mix-blend-mode: hard-light;
+    pointer-events: none;
     opacity: 0.4;
 }
 .PetVideo::after{
@@ -152,7 +153,6 @@
     top: -12px;
     border-radius: 3.7rem;
     z-index: 1;
-    pointer-events: none;
 }
 .LixVideo::before{
     content: '';
@@ -160,13 +160,14 @@
     height: 355px;
     position: absolute;
     left: 96px;
-    top: -84px;
+    top: -88px;
     background-repeat: no-repeat;
     background: linear-gradient(238deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%);
     background-size: contain;
     z-index: 3;
     border-radius: 20px;
     mix-blend-mode: color-burn;
+    pointer-events: none;
     opacity: 0.5;
     transform: rotate( 270deg);
 }
@@ -271,7 +272,6 @@
     top: -12px;
     border-radius: 3.7rem;
     z-index: 1;
-    pointer-events: none;
 }
 .AmongVideo::before{
     content: '';
@@ -279,7 +279,7 @@
     height: 355px;
     position: absolute;
     left: 96px;
-    top: -84px;
+    top: -88px;
     background-repeat: no-repeat;
     background: linear-gradient(238deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 100%);
     background-size: contain;
@@ -287,6 +287,7 @@
     border-radius: 20px;
     mix-blend-mode: hue;
     opacity: 0.5;
+    pointer-events: none;
     transform: rotate( 270deg);
 }
 .AmongVideo::after{
@@ -437,6 +438,7 @@
         border-radius: 20px;
         mix-blend-mode: color-burn;
         opacity: 0.5;
+        pointer-events: none;
         transform: rotate( 270deg);
     }
     .LixVideo::after{
@@ -445,6 +447,7 @@
         height: 318px;
         left: 7px;
         top: -117px;
+        pointer-events: none;
     }
     .LixVideo > video
     {
@@ -453,7 +456,6 @@
         border-radius: 3.7rem;
         left: -19px;
         z-index: 1;
-        pointer-events: none;
         width: 257px;
     }
     .LixVideo #firstLixSpan
@@ -554,6 +556,7 @@
         mix-blend-mode: color-burn;
         opacity: 0.5;
         transform: rotate( 270deg);
+        pointer-events: none;
     }
     .AmongVideo::after{
         content: '';
@@ -561,6 +564,7 @@
         height: 318px;
         left: 7px;
         top: -117px;
+        pointer-events: none;
     }
     .AmongVideo > video
     {
@@ -569,7 +573,6 @@
         border-radius: 3.7rem;
         left: -19px;
         z-index: 1;
-        pointer-events: none;
         width: 257px;
     }
     .AmongVideo #firstAmongSpan
