--- a/css/buttonstyle.css
+++ b/css/buttonstyle.css
@@ -8,6 +8,8 @@
   }
   
   .playBut {
+    left: 62%;
+    top: 11%;
     display: inline-block;
     -webkit-transition: all 0.5s ease;
     position: absolute;
@@ -57,4 +59,11 @@
   .playBut:hover .circle {
     stroke-dashoffset: 0;
     opacity: 1;
+  }
+
+  @media (max-width: 500px){
+    .playBut{
+      left: 38%;
+      top: 7%;
+    }
   }
