--- a/css/style.css
+++ b/css/style.css
@@ -658,3 +658,132 @@ body{
     background: -webkit-linear-gradient( -70deg  , #ff7170 0%, #ffe57f 100%);
     height: 5px;
 }
+
+/*
+    PROJECTS DIVISION
+*/
+
+.main-content {
+    margin-right: 2rem;
+    margin-left: 2rem;
+    margin-top: 0;
+    overflow:hidden;
+      position: relative;
+      background: #e0e0e0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-flow: column;
+      border-radius: 10px;
+      height: 380px;
+     
+  }
+ /* .main-content:hover{
+    cursor: url("../images/cat/measure.svg ") 16 16 ,auto;
+  }*/
+
+  @media(max-width:670px){
+    .main-content {
+        margin-top: 50px;
+    }
+}
+  .vignette{
+    position:absolute;
+    width:100%; height:100%;
+    box-shadow:inset 0px 0px 150px 20px black;
+    mix-blend-mode: soft-light;
+    -webkit-animation: vignette-anim 3s infinite; /* Safari 4+ */
+    -moz-animation:    vignette-anim 3s infinite; /* Fx 5+ */
+    -o-animation:      vignette-anim 3s infinite; /* Opera 12+ */
+    animation:         vignette-anim 3s infinite; /* IE 10+, Fx 29+ */
+  }
+  
+  .noise {
+      z-index: 15;
+      position: absolute;
+      top: 0;
+      left: 0;
+      
+      width: 100%;
+      height: 100%;
+      
+      pointer-events: none;
+      opacity: .12;
+  }
+  
+  .line{
+    position:absolute;
+    height:100%; width:1px;
+    opacity:0.1;
+    background-color:#000;
+  }
+  
+  .titleCont{position:relative;}
+  
+  .main-title {
+      padding: .3em 1em .25em;
+      width: 100%;
+      height: 100%;    
+      font-weight: 400;
+      font-size: 40px;
+      color: white;
+      font-family: 'Bellefair', serif;
+      position:relative;
+      line-height:1.3;
+  }
+  
+  
+  @-webkit-keyframes vignette-anim {
+    0%   , 100%{ opacity: 1; }
+    50% { opacity: 0.7; }
+  }
+  @-moz-keyframes vignette-anim {
+    0%   , 100%{ opacity: 1; }
+    50% { opacity: 0.7; }
+  }
+  @-o-keyframes vignette-anim {
+    0%   , 100%{ opacity: 1; }
+    50% { opacity: 0.7; }
+  }
+  @keyframes vignette-anim {
+    0%   , 100%{ opacity: 1; }
+    50% { opacity: 0.7; }
+  }
+
+  /*WAVES*/
+  .waves {
+    z-index: 16;
+    position:relative;
+    width: 100%;
+    height:15vh;
+    margin-bottom:-7px; /*Fix for safari gap*/
+    min-height:100px;
+    max-height:150px;
+  }
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+  }
