--- a/css/style.css
+++ b/css/style.css
@@ -676,7 +676,7 @@ body{
       flex-flow: column;
       border-radius: 10px;
       height: 380px;
-     
+      cursor: initial;
   }
  /* .main-content:hover{
     cursor: url("../images/cat/measure.svg ") 16 16 ,auto;
