--- a/src/layouts/components/Timeline.astro
+++ b/src/layouts/components/Timeline.astro
@@ -1,14 +1,16 @@
 ---
-//import React, { useEffect, useMemo, useRef, useState } from "react";
 import type { IExperience } from "../../interfaces/experience.interface";
 import CardShowcase from "./CardShowcase.component";
 import { World } from "../../assets/icons";
 import type { TIconKey } from "../../interfaces/IconList";
 import { IconList } from "../../constants/Icons";
 import type { TExperienceContent } from '../../interfaces/languages.interface';
+import DoughnutChart from "./DoughnutChart.astro";
+import LineChart from "./LineChart.astro";
+import { extractChartProps } from "@/lib/utils/extractChartFromString";
 
 type TIcon = Array<{ key: TIconKey; Icon: JSX.Element }>;
-const { achievements, data } = Astro.props as TExperienceContent;
+const { achievementsText, data } = Astro.props as TExperienceContent;
 const { pathname } = Astro.url;
 ---
   <ul class="timeline before:dark:bg-neutral-500 before:bg-neutral-900">
@@ -21,8 +23,8 @@ const { pathname } = Astro.url;
             <p class="dark:bg-neutral-500 bg-neutral-950 timeline-event-thumbnail">
               {i.timePeriod}
             </p>
-            <div class="flex items-center gap-4">
-              <h3 class="w-min flex-1">{i.company}</h3>
+            <div class="flex items-center gap-y-[0.2em] md:gap-y-4 gap-x-4 flex-wrap-reverse md:flex-nowrap">
+              <h3 class="w-min flex-1 tracking-[.15em] underline decoration-blue-500/50 underline-offset-8">{i.company}</h3>
               {i.location && (
                 <div class="flex">
                   <World />
@@ -30,19 +32,36 @@ const { pathname } = Astro.url;
                 </div>
               )}
             </div>
-            <h4>{i.title}</h4>
+            <h4 class="mt-2">{i.title}</h4>
             <p class="hyphens-auto text-justify">{i.description}</p>
             {i.achievements && (
               <div class="flex flex-col mt-3 mb-1 gap-1">
                 <h5 class="p-2 bg-neutral-200 dark:bg-neutral-600 rounded-sm">
-                  {achievements}
+                  {achievementsText}
                 </h5>
                 {i.achievements.map((ach, idy) => {
+                  
+                  const extracted = extractChartProps(ach.description);
+                  let jsx;
+
+                  if (extracted) {
+                    const { data, substring, text, type, width } = extracted.data;
+                    jsx = (
+                      <div class="flex gap-y-4 items-center flex-col">
+                        <p class="m-0 p-0">{extracted.output}</p>
+                        {type === "donut" && <DoughnutChart width={width} subtext={substring}/>}
+                        {type === "line" && <LineChart width={width} subtext={substring}/>}
+                      </div>
+                    )
+                    console.log(`data: `, extracted);
+                  }
+                  else jsx = <p class="m-0 p-0"> {ach.description} </p>;
+                  
                   return (
-                    <details /*key={`${idx}-${idy}`}*/ name="unique" class="overflow-hidden rounded-sm mb-2 border dark:border-neutral-500 border-blue-gray-100 open:text-blue-400 ">
+                    <details /*key={`${idx}-${idy}`}*/ name={i.company} open={!!ach.isDefaultOpen} class={`overflow-hidden rounded-sm ${idy === 0 ? 'my-2':'mb-2'} border dark:border-neutral-500 border-blue-gray-100 open:text-blue-400`}>
                       <summary class={`relative p-4 pl-9 cursor-pointer`}>{ach.title}</summary>
                       <div class="hyphens-auto text-justify p-4 block bg-neutral-100 dark:bg-neutral-800 px-10 text-neutral-600 dark:text-neutral-400">
-                        {ach.description}
+                        {jsx}
                       </div>
                     </details>
                   )
